--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
   flutter_bloc: ^9.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/image/
+    - asset/image/cat_img/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
